@@ -1,3 +1,11 @@
+2004-05-28 Vangelis Rokas <vrokas AT otenet.gr>
+
+	* src/pic16/glue.c (pic16emitStaticSeg): do not print as publics or
+	externs configuration variables,
+	* src/pic16/ralloc.h,
+	* src/pic16/ralloc.cc: IS_CONFIG_ADDRESS is made public and added
+	prototype in header, commented out some debug messages
+
 2004-05-26 Vangelis Rokas <vrokas AT otenet.gr>
 
 	* src/pic16/glue.c,
